# vimania

./: .bumpversion.cfg  .envrc  .gitignore  Makefile  Pipfile  README.md
plugin/: python_wrapper.vim  uri.vim  vimania.vim  vimania_python_wrapper.vim
plugin/textobj/: uri.vim
pythonx/: setup.cfg
pythonx/vimania/: __init__.py  buku.py  cli.py  compatibility.py  core.py  environment.py  exception.py  handle_buffer.py  todos.py  vim_helper.py  vimania_manager.py
pythonx/vimania/db/: dal.py  todos.db
pythonx/vimania/db/sql/: hierarchy.sql
pythonx/vimtool/: __init__.py  cli.py  core.py  environment.py  handle_buffer.py  todos.py  vim_helper.py  vimtool_manager.py
pythonx/vimtool/db/: dal.py  scratch.sql
pythonx/vimtool/db/alembic/versions/: ad8492b766f6_create_todo_table.py
pythonx/vimtool/db/sql/: hierarchy.sql
scripts/: cp_venv.sh
tests/: conftest.py  run_manual_test.sh  run_test.sh  test_cli.py  test_core.py  test_dal.py  test_handle_buffer.py  test_textobj_uri.vader  test_todos.py  test_todos.vader  test_vimania_manager.py  test_vimania_vim.vader  test_vimtool_manager.py  test_vimtool_vim.vader  x.md
tests/data/: test.md
tests/sql/: load_testdata.sql
